// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Qrcode Qrcode base demo works fine 1`] = `
<base>
  <wx-view
    class="intro-text"
  >
     基本用法 
  </wx-view>
  <t-qrcode
    level="M"
    status="active"
    value="https://tdesign.gtimg.com/site/tdesign-logo.png"
  />
</base>
`;

exports[`Qrcode Qrcode borderless demo works fine 1`] = `
<borderless>
  <t-qrcode
    borderless="{{true}}"
    value="https://tdesign.gtimg.com/site/tdesign-logo.png"
  />
</borderless>
`;

exports[`Qrcode Qrcode color demo works fine 1`] = `
<color>
  <wx-view
    class="intro-text"
    style="padding-bottom: 16px"
  >
     二维码颜色 
  </wx-view>
  <t-qrcode
    bgColor="#fff"
    color="#0052D9"
    level="M"
    status="active"
    value="https://tdesign.gtimg.com/site/tdesign-logo.png"
  />
  <wx-view
    class="intro-text"
    style="padding-bottom: 16px; padding-top: 24px"
  >
     二维码背景颜色 
  </wx-view>
  <t-qrcode
    bgColor="#D9E1FF"
    color="#0052D9"
    level="M"
    status="active"
    value="https://tdesign.gtimg.com/site/tdesign-logo.png"
  />
</color>
`;

exports[`Qrcode Qrcode icon demo works fine 1`] = `
<wx-icon>
  <t-qrcode
    icon="https://tdesign.gtimg.com/site/tdesign-logo.png"
    value="https://tdesign.gtimg.com/site/tdesign-logo.png"
  />
</wx-icon>
`;

exports[`Qrcode Qrcode level demo works fine 1`] = `
<level>
  <t-slider
    marks="{{
      Object {
        "0": "7%",
        "1": "15%",
        "2": "25%",
        "3": "35%",
      }
    }}"
    max="3"
    min="0"
    step="1"
    value="{{1}}"
    bind:change="handleSliderChange"
  />
  <wx-view
    style="height: 16px; width: 100%"
  />
  <t-qrcode
    level="M"
    status="active"
    value="https://tdesign.gtimg.com/site/tdesign-logo.png"
  />
</level>
`;

exports[`Qrcode Qrcode size demo works fine 1`] = `
<size>
  <wx-view
    class="button-group"
  >
    <wx-view
      class="left-change-button change-button "
      bind:tap="decreaseSize"
    >
      <wx-view
        class="button-text "
      >
        - Smaller
      </wx-view>
    </wx-view>
    <wx-view
      class="right-change-button change-button "
      bind:tap="increaseSize"
    >
      <wx-view
        class="button-text "
      >
        + Larger
      </wx-view>
    </wx-view>
  </wx-view>
  <wx-view
    class="show-container"
  >
    <t-qrcode
      size="{{160}}"
      value="https://tdesign.gtimg.com/site/tdesign-logo.png"
    />
  </wx-view>
</size>
`;

exports[`Qrcode Qrcode status demo works fine 1`] = `
<status>
  <wx-view
    class="qrcode-container"
  >
    <wx-text
      class="status-text"
    >
      acgtive 
    </wx-text>
    <t-qrcode
      status="active"
      value="https://tdesign.gtimg.com/site/tdesign-logo.png"
      bind:refresh="handleRefresh"
    />
  </wx-view>
  <wx-view
    class="qrcode-container"
  >
    <wx-text
      class="status-text"
    >
      expired 
    </wx-text>
    <t-qrcode
      status="expired"
      value="https://tdesign.gtimg.com/site/tdesign-logo.png"
      bind:refresh="handleRefresh"
    />
  </wx-view>
  <wx-view
    class="qrcode-container"
  >
    <wx-text
      class="status-text"
    >
      loading 
    </wx-text>
    <t-qrcode
      status="loading"
      value="https://tdesign.gtimg.com/site/tdesign-logo.png"
      bind:refresh="handleRefresh"
    />
  </wx-view>
  <wx-view
    class="qrcode-container"
  >
    <wx-text
      class="status-text"
    >
      scanned 
    </wx-text>
    <t-qrcode
      status="scanned"
      value="https://tdesign.gtimg.com/site/tdesign-logo.png"
      bind:refresh="handleRefresh"
    />
  </wx-view>
</status>
`;
